[package]
name = "http-to-nats-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.45"
axum = "0.8.8"
futures = "0.3.31"
nuid = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[profile.release]
lto = "fat"