[package]
name = "http-to-nats-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.45"
axum = "0.8.8"
axum-otel = "0.31.0"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "request-id", "trace"] }
tracing = "0.1.44"
tracing-otel-extra = { version = "0.31.0", features = ["logger", "env"] }
uuid = { version = "1.19.0", features = ["v7"] }

[profile.release]
lto = "fat"
